@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2003/10/24 22:00:08 jdolecek Exp $
+$NetBSD: distinfo,v 1.5 2003/11/14 19:45:54 jdolecek Exp $
 
-SHA1 (./opera-7.21-20031013.1-static-qt.i386.rpm) = 26cf95ffb6eef4018bf7ea8256e8c5efb7f46924
-Size (./opera-7.21-20031013.1-static-qt.i386.rpm) = 5076264 bytes
+SHA1 (./opera-7.22-20031103.1-static-qt.i386-en.rpm) = a7985aad2f063e503b76604b945bb6971f452098
+Size (./opera-7.22-20031103.1-static-qt.i386-en.rpm) = 5133873 bytes
