@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3827 2003/11/14 10:03:05 wiz Exp $
+$NetBSD: CHANGES,v 1.3828 2003/11/14 19:45:54 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4603,3 +4603,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated uvscan to 4.24.0 [wiz 2003-11-14]
 	Updated klavg to 1.1nb3 [wiz 2003-11-14]
 	Updated kpsql-1.0nb4 [wiz 2003-11-14]
+	Updated opera7 to 7.22 [jdolecek 2003-11-14]
